--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "body-parser": "^1.17.2",
     "express": "^4.15.3",
     "express-session": "^1.15.3",
+    "method-override": "^2.3.8",
     "mustache-express": "^1.2.4",
     "pg-promise": "^5.7.1"
   },
