--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "bcrypt": "^1.0.2",
     "body-parser": "^1.17.2",
     "express": "^4.15.3",
+    "express-mysql-session": "^1.2.1",
     "express-session": "^1.15.3",
     "method-override": "^2.3.8",
     "mustache-express": "^1.2.4",
