--- a/package.json
+++ b/package.json
@@ -6,9 +6,10 @@
   "dependencies": {
     "bcrypt": "^1.0.2",
     "body-parser": "^1.17.2",
+    "client-sessions": ">= 0.3.1",
     "express": "^4.15.3",
     "express-session": "^1.15.3",
-    "client-sessions": ">= 0.3.1",
+    "method-override": "^2.3.9",
     "mustache-express": "^1.2.4",
     "pg-promise": "^5.7.1"
   },
