--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "body-parser": "^1.17.2",
     "client-sessions": ">= 0.3.1",
     "express": "^4.15.3",
-    "express-session": "^1.15.3",
+    "express-validator": "^4.3.0",
     "method-override": "^2.3.9",
     "mustache-express": "^1.2.4",
     "pg-promise": "^5.7.1"
