--- a/package.json
+++ b/package.json
@@ -7,13 +7,16 @@
     "bcrypt": "^1.0.2",
     "body-parser": "^1.17.2",
     "client-sessions": ">= 0.3.1",
+    "d3": "^4.12.0",
     "express": "^4.15.3",
     "express-validator": "^4.3.0",
     "method-override": "^2.3.9",
     "mustache-express": "^1.2.4",
     "pg-promise": "^5.7.1"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "npm-install-webpack-plugin": "^4.0.5"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
