--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "npm-install-webpack-plugin": "^4.0.5"
   },
   "scripts": {
+    "start": "node app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
